Mimic existing code to use testing-library-dom's byLabelText query
Usage in Playwright is similar to upstream's documentation:

https://github.com/kevin940726/role-selector/tree/b154c1544c079ccddf6bf04e94354a1f05f97631

const {selectorScript} = require("role-selector/label-playwright-test")

selectors.register("label", selectorScript)

--- a/package.json
+++ b/package.json
@@ -24,6 +24,10 @@
       "import": "./dist/playwright.js",
       "types": "./dist/playwright-test.d.ts"
     },
+    "./label-playwright-test": {
+      "require": "./dist/playwright-label.cjs",
+      "import": "./dist/playwright-label.js"
+    },
     "./puppeteer": {
       "require": "./dist/puppeteer.cjs",
       "import": "./dist/puppeteer.js",
